syntax = "proto3";

enum Gear {
  PARK = 0;
  DRIVE = 1;
  REVERSE = 2;
  NEUTRAL = 3;
}

enum AutopilotState {
  NONE = 0;
  SELF_DRIVING = 1;
  AUTOSTEER = 2;
  TACC = 3;
}

message SeiMetadata {
  uint32 version = 1;
  Gear gear_state = 2;
  uint64 frame_seq_no = 3;
  float vehicle_speed_mps = 4;
  float accelerator_pedal_position = 5;
  float steering_wheel_angle = 6;
  bool blinker_on_left = 7;
  bool blinker_on_right = 8;
  bool brake_applied = 9;
  AutopilotState autopilot_state = 10;
  double latitude_deg = 11;
  double longitude_deg = 12;
  double heading_deg = 13;
  double linear_acceleration_mps2_x = 14;
  double linear_acceleration_mps2_y = 15;
  double linear_acceleration_mps2_z = 16;
}
